k8s/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
  selector:
    io.kompose.service: mosquitto
status:
  loadBalancer: {}
