k8s/nodered-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nodered
  name: nodered
spec:
  ports:
    - name: "1880"
      port: 1880
      targetPort: 1880
  selector:
    io.kompose.service: nodered
status:
  loadBalancer: {}
