k8s/qemu-rpi-os-lite-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: qemu-rpi-os-sensor
  name: qemu-rpi-os-sensor
spec:
  ports:
    - name: "5022"
      port: 5022
      targetPort: 5022
  selector:
    io.kompose.service: qemu-rpi-os-sensor
status:
  loadBalancer: {}
